--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="game_image">Game Image</string>
-    <string name="test_text">Test Text</string>
+    <string name="alert_title">Round Won!</string>
+    <string name="alert_message">Congratulations, you won this round!</string>
 </resources>
